force-app/main/default/objects/Claim__c/fields/Estimated_Amount_Due_A__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Amount_Due_A__c</fullName>
    <description>Refers to the expected amount that a patient is responsible for paying based on their insurance coverage, benefits, and any applicable cost-sharing arrangements.</description>
    <label>Estimated Amount Due A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>