force-app/main/default/objects/Claim__c/fields/External_Cause_of_Injury_Code__c.field-meta.xml
<CustomField>
    <fullName>External_Cause_of_Injury_Code__c</fullName>
    <description>Provide additional information about how the injury or condition occurred, contributing to a more detailed understanding of the patient's health status.</description>
    <label>External Cause of Injury Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>