force-app/main/default/objects/Claim__c/fields/fdos__c.field-meta.xml
<CustomField>
    <fullName>fdos__c</fullName>
    <description>Used to store attribute receiving from ClaimMD.</description>
    <label>fdos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>