force-app/main/default/objects/Claim__c/fields/Federal_Tax_Id_Number__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_Id_Number__c</fullName>
    <description>Unique identifier used to identify the billing entity or provider organization.</description>
    <inlineHelpText>Please use numbers between 1-9 only</inlineHelpText>
    <label>Federal Tax ID Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>