force-app/main/default/objects/Claim__c/fields/First_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>First_Diagnosis__c</fullName>
    <label>First Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>