force-app/main/default/objects/Claim__c/fields/First_Name_NAME_OF_REFERRING_PROVIDER__c.field-meta.xml
<CustomField>
    <fullName>First_Name_NAME_OF_REFERRING_PROVIDER__c</fullName>
    <description>Used to store first name of referring provider.</description>
    <label>First Name [NAME OF REFERRING PROVIDER]</label>
    <type>TextArea</type>
</CustomField>