force-app/main/default/objects/Claim__c/fields/HCPC_Rate__c.field-meta.xml
<CustomField>
    <fullName>HCPC_Rate__c</fullName>
    <description>Describe services or items provided.</description>
    <label>HCPC Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>