force-app/main/default/objects/Claim__c/fields/Health_Plan_Id_c__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan_Id_c__c</fullName>
    <description>Refers to an identifier associated with a health plan or insurance company.</description>
    <label>Health Plan ID c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>