force-app/main/default/objects/Claim__c/fields/Hospitalization_Dates__c.field-meta.xml
<CustomField>
    <fullName>Hospitalization_Dates__c</fullName>
    <label>Hospitalization Dates</label>
    <type>Date</type>
</CustomField>