force-app/main/default/objects/Claim__c/fields/Hospitalization_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Hospitalization_From_Date__c</fullName>
    <description> Used to store starting date  of the hospitalization period related to the services being billed on the claim.</description>
    <label>Hospitalization From Date</label>
    <type>Date</type>
</CustomField>