force-app/main/default/objects/Claim__c/fields/Hospitalization_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Hospitalization_To_Date__c</fullName>
    <description>Used to store ending date of the hospitalization period.</description>
    <label>Hospitalization To Date</label>
    <type>Date</type>
</CustomField>