force-app/main/default/objects/Claim__c/fields/Informational_Remark_Codes__c.field-meta.xml
<CustomField>
    <fullName>Informational_Remark_Codes__c</fullName>
    <description>Used to store Remittance Advice Remark Codes.</description>
    <label>Informational Remark Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M17</fullName>
            </value>
            <value>
                <fullName>M27</fullName>
            </value>
            <value>
                <fullName>M32</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>