force-app/main/default/objects/Claim__c/fields/Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Number__c</fullName>
    <description>Patient's health insurance identification number.</description>
    <label>Insurance Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>