force-app/main/default/objects/Claim__c/fields/Insurance_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Plan_Name__c</fullName>
    <description> Indicates the name of the insurance plan.</description>
    <label>Insurance Plan Name</label>
    <length>28</length>
    <type>Text</type>
</CustomField>