force-app/main/default/objects/Claim__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <description>Indicated the type of insurance (i.e. MEdicaid, Medicare, Private Insurance etc.)</description>
    <label>Insurance Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>