force-app/main/default/objects/Claim__c/fields/Insured_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Insured_Address_2__c</fullName>
    <description>Indicates the second Address of the insured person.</description>
    <label>Insured Address 2</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>