force-app/main/default/objects/Claim__c/fields/Insured_Address__c.field-meta.xml
<CustomField>
    <fullName>Insured_Address__c</fullName>
    <description>Indicates the Address of the insured person.</description>
    <label>Insured Address</label>
    <type>TextArea</type>
</CustomField>