force-app/main/default/objects/Claim__c/fields/Insured_Authorized_Person_Signature__c.field-meta.xml
<CustomField>
    <fullName>Insured_Authorized_Person_Signature__c</fullName>
    <description>Refers to the signature of an individual who has the legal authority to give consent or authorization for medical treatments, procedures, or disclosure of health information on behalf of the insured individual.</description>
    <label>Insured / Authorized Person Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>