force-app/main/default/objects/Claim__c/fields/Insured_City__c.field-meta.xml
<CustomField>
    <fullName>Insured_City__c</fullName>
    <description>Indicated the City of the insured person.</description>
    <label>Insured City</label>
    <length>24</length>
    <type>Text</type>
</CustomField>