force-app/main/default/objects/Claim__c/fields/Insured_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Insured_Country_Code__c</fullName>
    <description>Indicated the Country code of the Insured person.</description>
    <label>Insured Country Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>