force-app/main/default/objects/Claim__c/fields/Insured_DOB__c.field-meta.xml
<CustomField>
    <fullName>Insured_DOB__c</fullName>
    <description>Date Of Birth of Insured person.</description>
    <label>Insured DOB</label>
    <type>Date</type>
</CustomField>