force-app/main/default/objects/Claim__c/fields/Insured_First_name__c.field-meta.xml
<CustomField>
    <fullName>Insured_First_name__c</fullName>
    <description>First Name of the Insured person.</description>
    <label>Insured First name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>