force-app/main/default/objects/Claim__c/fields/Insured_Or_Auth_Persn_Date__c.field-meta.xml
<CustomField>
    <fullName>Insured_Or_Auth_Persn_Date__c</fullName>
    <description>Date on which the authorized representative or the insured individual signed the relevant documents</description>
    <label>Insured Or Auth Persn - Date</label>
    <type>Date</type>
</CustomField>