force-app/main/default/objects/Claim__c/fields/Insured_Or_Auth_Persn_Sign__c.field-meta.xml
<CustomField>
    <fullName>Insured_Or_Auth_Persn_Sign__c</fullName>
    <label>Insured Or Auth Persn- Sign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>