force-app/main/default/objects/Claim__c/fields/Insured_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insured_Policy__c</fullName>
    <description>Used to store identification number associated with the insured individual's health insurance policy, group plan, or Federal Employees' Compensation Act (FECA) coverage.</description>
    <label>Insured Policy Group / FECA Number</label>
    <length>28</length>
    <type>Text</type>
</CustomField>