force-app/main/default/objects/Claim__c/fields/Insured_s_Group_Name_B__c.field-meta.xml
<CustomField>
    <fullName>Insured_s_Group_Name_B__c</fullName>
    <description>Used to store name of the group health plan or insurance group under which the patient (insured) is covered.</description>
    <label>Insured&apos;s Group Name B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>