force-app/main/default/objects/Claim__c/fields/Insured_s_Group_Number_B__c.field-meta.xml
<CustomField>
    <fullName>Insured_s_Group_Number_B__c</fullName>
    <description> Used to provide information about the insured individual's group or policy number. </description>
    <label>Insured&apos;s Group Number B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>