force-app/main/default/objects/Claim__c/fields/Insured_s_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Insured_s_ID_Number__c</fullName>
    <description>Captures the insured individual's identification number assigned by the insurance plan.</description>
    <inlineHelpText>The Insured’s ID Number is the identification number of the insured. This information identifies the insured to the payer. This field allows for entry of 29 characters.</inlineHelpText>
    <label>Insured’s ID Number</label>
    <length>29</length>
    <type>Text</type>
</CustomField>