force-app/main/default/objects/Claim__c/fields/Insured_s_ID_Number_C__c.field-meta.xml
<CustomField>
    <fullName>Insured_s_ID_Number_C__c</fullName>
    <description>Used to store unique identifier associated with the insured individual's health insurance coverage.</description>
    <label>Insured’s ID Number C</label>
    <length>100</length>
    <type>Text</type>
</CustomField>