force-app/main/default/objects/Claim__c/fields/Insured_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Insured_s_Name__c</fullName>
    <description>Enter the insured’s full last name, first name, and middle initial. If the insured uses a last name suffix (e.g., Jr, Sr),  enter it after the last name and before the first name.  Titles (e.g., Sister, Capt, Dr) and professional suffixes (e.g., PhD, MD, Esq) should not be included with the name.Use commas to separate the last name, first name, and middle initial. A hyphen can be used for hyphenated names. Do not use periods within the name.</description>
    <label>Insured&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>