force-app/main/default/objects/Claim__c/fields/Insured_s_Name_B__c.field-meta.xml
<CustomField>
    <fullName>Insured_s_Name_B__c</fullName>
    <description>Used to provide information about the individual who is insured under the health insurance policy.</description>
    <label>Insured&apos;s Name B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>