force-app/main/default/objects/Claim__c/fields/Insured_Sex__c.field-meta.xml
<CustomField>
    <fullName>Insured_Sex__c</fullName>
    <description>Sex/Gender of the isnured person.</description>
    <label>Insured Sex</label>
    <length>50</length>
    <type>Text</type>
</CustomField>