force-app/main/default/objects/Claim__c/fields/Insured_State__c.field-meta.xml
<CustomField>
    <fullName>Insured_State__c</fullName>
    <description>Used to store state of insured person.</description>
    <label>Insured State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>