force-app/main/default/objects/Claim__c/fields/Insured_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Insured_Telephone__c</fullName>
    <description>Indicates insured contact number.</description>
    <label>Insured Telephone</label>
    <type>Phone</type>
</CustomField>