force-app/main/default/objects/Claim__c/fields/Insured_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Insured_Zip_Code__c</fullName>
    <description>Used to store Zip Code of insured person.</description>
    <label>Insured Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>