force-app/main/default/objects/Claim__c/fields/Insured_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Insured_Zipcode__c</fullName>
    <label>Insured Zipcode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>