force-app/main/default/objects/Claim__c/fields/Interest_Late_filing_charges__c.field-meta.xml
<CustomField>
    <fullName>Interest_Late_filing_charges__c</fullName>
    <description>Used to store Interest/Late filing charges.</description>
    <defaultValue>0</defaultValue>
    <label>Interest/Late filing charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>