force-app/main/default/objects/Claim__c/fields/isRecordInReadyToSubmitStatus__c.field-meta.xml
<CustomField>
    <fullName>isRecordInReadyToSubmitStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRecordInReadyToSubmitStatus</label>
    <type>Checkbox</type>
</CustomField>