force-app/main/default/objects/Claim__c/fields/Last_Name_NAME_OF_REFERRING_PROVIDER__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_NAME_OF_REFERRING_PROVIDER__c</fullName>
    <description>Used to store last name of Referring provider.</description>
    <label>Last Name [NAME OF REFERRING PROVIDER]</label>
    <type>TextArea</type>
</CustomField>