force-app/main/default/objects/Claim__c/fields/Manual_ERA__c.field-meta.xml
<CustomField>
    <fullName>Manual_ERA__c</fullName>
    <description>Refers Era Generation Method</description>
    <defaultValue>false</defaultValue>
    <label>Manual ERA?</label>
    <type>Checkbox</type>
</CustomField>