force-app/main/default/objects/Claim__c/fields/Manual_Reconciliation_Count__c.field-meta.xml
<CustomField>
    <fullName>Manual_Reconciliation_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is required to store how many times manual reconciliation happened on claim</description>
    <label>Manual Reconciliation Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>