force-app/main/default/objects/Claim__c/fields/Master_ERA__c.field-meta.xml
<CustomField>
    <fullName>Master_ERA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master ERA</label>
    <referenceTo>EOB__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>