force-app/main/default/objects/Claim__c/fields/Medicare_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Type_Code__c</fullName>
    <description>Used to store Medicare Type Code and sending it to clearing house- mapped with insurance Medicare Type Code</description>
    <label>Medicare Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
                <label>WORKING AGE</label>
            </value>
            <value>
                <fullName>43</fullName>
                <label>MEDICARE DISABLED</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>CONDITIONAL / ACCIDENT</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>AUTO ACCIDENT</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>WORKERS COMP / BLACK LUNG</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>OTHER FEDERAL AGENCY</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>WCMSA</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>BLACK LUNG</label>
            </value>
            <value>
                <fullName>42</fullName>
                <label>VETERAN&apos;S ADMINISTRATION</label>
            </value>
            <value>
                <fullName>47</fullName>
                <label>LIABILITY</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>