force-app/main/default/objects/Claim__c/fields/MiddleName_NAME_OF_REFERRING_PROVIDER__c.field-meta.xml
<CustomField>
    <fullName>MiddleName_NAME_OF_REFERRING_PROVIDER__c</fullName>
    <description>Used to store middle name of Referring Provider.</description>
    <label>MiddleName [NAME OF REFERRING PROVIDER]</label>
    <type>TextArea</type>
</CustomField>