force-app/main/default/objects/Claim__c/fields/Name_of_referring_provider_Other_sourc__c.field-meta.xml
<CustomField>
    <fullName>Name_of_referring_provider_Other_sourc__c</fullName>
    <label>Name of referring provider / Other sourc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>