force-app/main/default/objects/Claim__c/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <description>The NPI ID number of the referring, ordering, or supervising provider is the unique identifier of the professional.</description>
    <label>NPI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>