force-app/main/default/objects/Claim__c/fields/NUCC__c.field-meta.xml
<CustomField>
    <fullName>NUCC__c</fullName>
    <description>Used to store ID Qualifiers help specify the type of identification or code being used in a particular data field.</description>
    <label>NUCC (17 A)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0B</fullName>
            </value>
            <value>
                <fullName>1G</fullName>
            </value>
            <value>
                <fullName>G2</fullName>
            </value>
            <value>
                <fullName>LU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>