force-app/main/default/objects/Claim__c/fields/NUCC_Description__c.field-meta.xml
<CustomField>
    <fullName>NUCC_Description__c</fullName>
    <description>The non-NPI ID number of the referring, ordering, or supervising provider is the uniqueidentifier of the professional.</description>
    <inlineHelpText>The non-NPI ID number of the referring, ordering, or supervising provider is the uniqueidentifier of the professional.</inlineHelpText>
    <label>NUCC (Description) [17 A]</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>