force-app/main/default/objects/Claim__c/fields/Occurance_Code_2B__c.field-meta.xml
<CustomField>
    <fullName>Occurance_Code_2B__c</fullName>
    <description>Specify events or situations related to the patient's stay or treatment in a healthcare facility.</description>
    <label>Occurance Code 2B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>