force-app/main/default/objects/Claim__c/fields/Occurance_Date_1A__c.field-meta.xml
<CustomField>
    <fullName>Occurance_Date_1A__c</fullName>
    <description>Date Associated with occurance Code 1A</description>
    <label>Occurance Date 1A</label>
    <type>Date</type>
</CustomField>