force-app/main/default/objects/Claim__c/fields/Occurance_Date_1B__c.field-meta.xml
<CustomField>
    <fullName>Occurance_Date_1B__c</fullName>
    <description>Date Associated with occurance Code 1B</description>
    <label>Occurance Date 1B</label>
    <type>Date</type>
</CustomField>