force-app/main/default/objects/Claim__c/fields/Occurance_Date_2A__c.field-meta.xml
<CustomField>
    <fullName>Occurance_Date_2A__c</fullName>
    <description>Date Associated with occurance Code 2A</description>
    <label>Occurance Date 2A</label>
    <type>Date</type>
</CustomField>