force-app/main/default/objects/Claim__c/fields/Occurance_Date_2B__c.field-meta.xml
<CustomField>
    <fullName>Occurance_Date_2B__c</fullName>
    <description>Date Associated with occurance Code 2B</description>
    <label>Occurance Date 2B</label>
    <type>Date</type>
</CustomField>