force-app/main/default/objects/Claim__c/fields/Occurance_Date_3A__c.field-meta.xml
<CustomField>
    <fullName>Occurance_Date_3A__c</fullName>
    <description>Date Associated with occurance Code 3A</description>
    <label>Occurance Date 3A</label>
    <type>Date</type>
</CustomField>