force-app/main/default/objects/Claim__c/fields/Occurance_Date_3B__c.field-meta.xml
<CustomField>
    <fullName>Occurance_Date_3B__c</fullName>
    <description>Date Associated with occurance Code 3B</description>
    <label>Occurance Date 3B</label>
    <type>Date</type>
</CustomField>