force-app/main/default/objects/Claim__c/fields/Occurance_Span_Code_2A__c.field-meta.xml
<CustomField>
    <fullName>Occurance_Span_Code_2A__c</fullName>
    <description>Used to store code that identifies the type of occurrence or event.</description>
    <label>Occurance Span Code 2A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>