force-app/main/default/objects/Claim__c/fields/Occurance_Span_From_Date_1A__c.field-meta.xml
<CustomField>
    <fullName>Occurance_Span_From_Date_1A__c</fullName>
    <description>Used to indicate the starting date of an occurrence span associated with Occurance Span Code 1A</description>
    <label>Occurance Span From Date 1A</label>
    <type>Date</type>
</CustomField>