force-app/main/default/objects/Claim__c/fields/Occurance_Span_From_Date_2B__c.field-meta.xml
<CustomField>
    <fullName>Occurance_Span_From_Date_2B__c</fullName>
    <description>Used to indicate the starting date of an occurrence span associated with Occurance Span Code 2B</description>
    <label>Occurance Span From Date 2B</label>
    <type>Date</type>
</CustomField>