force-app/main/default/objects/Claim__c/fields/Occurance_Span_Through_Date_1B__c.field-meta.xml
<CustomField>
    <fullName>Occurance_Span_Through_Date_1B__c</fullName>
    <description>Used to report the ending date of a period of occurrence or condition related to the patient's stay associated with Occurance Span Code 1B.</description>
    <label>Occurance Span Through Date 1B</label>
    <type>Date</type>
</CustomField>