force-app/main/default/objects/Claim__c/fields/Operating_Physician_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Operating_Physician_FirstName__c</fullName>
    <description>Refers to the First Name Of Operating Physician(the individual with primary responsibility for performing the surgical procedure).</description>
    <label>Operating Physician FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>