force-app/main/default/objects/Claim__c/fields/Operating_Physician_LastName__c.field-meta.xml
<CustomField>
    <fullName>Operating_Physician_LastName__c</fullName>
    <description>Refers to the Last Name of the Operating Physician.</description>
    <label>Operating Physician LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>