force-app/main/default/objects/Claim__c/fields/Operating_Physician_NPI__c.field-meta.xml
<CustomField>
    <fullName>Operating_Physician_NPI__c</fullName>
    <description>National Provider Identifier(NPI) Number of the operating provider.</description>
    <label>Operating Physician NPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>