force-app/main/default/objects/Claim__c/fields/Operating_Physician_Qualifying_Id__c.field-meta.xml
<CustomField>
    <fullName>Operating_Physician_Qualifying_Id__c</fullName>
    <description>Refers Qualifying ID which used to identify the operating physician.</description>
    <label>Operating Physician Qualifying ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>